# vim

./: .gitignore  CMakeLists.txt
src/: gui_w32.c  vim.exe.mnf
